--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Happy New Year !</title>
+    <title>Happy Nigga Year !</title>
     <link rel="stylesheet" href="./style.css">
 
   </head>
